--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ android {
     compileSdkVersion 29
     buildToolsVersion "30.0.1"
 
+    viewBinding.enabled = true
+
     defaultConfig {
         applicationId "com.kurotkin.messenger"
         minSdkVersion 21
@@ -35,10 +37,19 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.annotation:annotation:1.1.0"
+
+    implementation "com.mikepenz:materialdrawer:7.0.0"
+
+    // Add for NavController support
+    implementation "com.mikepenz:materialdrawer-nav:7.0.0"
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
